@startuml

title __ADAPTERS's Class Diagram__\n

  namespace com.kaizen.nightfolks {
    namespace controller.music.adapters {
      class com.kaizen.nightfolks.controller.music.adapters.SongsAdapter {
          - mSongs : List<Song>
          - voteVisibility : int
          + SongsAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.music.adapters {
      class com.kaizen.nightfolks.controller.music.adapters.SongsAdapter.ViewHolder {
          + titleTextView : TextView
          + voteBtn : MaterialButton
          + ViewHolder()
      }
    }
  }
  

  com.kaizen.nightfolks.controller.music.adapters.SongsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.kaizen.nightfolks.controller.music.adapters.SongsAdapter +-down- com.kaizen.nightfolks.controller.music.adapters.SongsAdapter.ViewHolder
  com.kaizen.nightfolks.controller.music.adapters.SongsAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
